[project]
name = "multi-agent-travel-planner"
version = "2.0.0"
description = "Multi-agent AI travel planner using Gemini + LangChain"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "langchain",
    "langchain-classic",
    "langchain-google-genai",
    "langchain-community",
    "icalendar",
    "google-search-results",
    "fastapi",
    "uvicorn[standard]",
    "wikipedia",
    "ddgs",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
